[package]
name = "tune-mill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy_midi = "0.6.0"
bevy_pkv = "0.7.0"
bevy_proto = "0.9.0"
bevy_time = "0.10.1"
bevy_tweening = "0.7.0"
midir = "0.9.1"
num_enum = "0.6.1"
winit = "0.28.3"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy)
[profile.dev.package."*"]
opt-level = 3
